--- a/config/packages/easy_admin.yaml
+++ b/config/packages/easy_admin.yaml
@@ -1,6 +1,23 @@
 easy_admin:
+    design:
+        brand_color: 'blue  '
+        assets:
+            favicon: '/assets/backend/favicon.png'
     entities:
-        # List the entity class name you want to manage
-        - App\Entity\Label
-        - App\Entity\UserFile
-        - App\Entity\Timetable
+        Label:
+            class: App\Entity\Label
+            label: 'Etiquettes'
+            help: 'Les étiquettes permettent d''aporter une précision à la réservation d''une ressource'
+            list:
+                title: "Les étiquettes du dossier"
+                fields: ['id', 'name']
+        UserFile:
+            class: App\Entity\UserFile
+            label: 'Utilisateurs'
+            list:
+                title: '%%entity_label%% listing'
+        Timetable:
+            class: App\Entity\Timetable
+            label: 'Grilles horaires'
+            list:
+                title: "Les grilles horaires du dossier"
