--- a/config/packages/vich_uploader.yaml
+++ b/config/packages/vich_uploader.yaml
@@ -2,8 +2,8 @@ vich_uploader:
     db_driver: orm # or mongodb or phpcr
     mappings:
         resource_image:
-            uri_prefix: /images/resources
-            upload_destination: '%kernel.project_dir%/public/images/resources'
+            uri_prefix:         '%app.path.resource_images%'
+            upload_destination: '%kernel.project_dir%/public%app.path.resource_images%'
             namer: Vich\UploaderBundle\Naming\SmartUniqueNamer
             inject_on_load: false
             delete_on_update: true
